examples/test/testpolicy7012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7012
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key12: value28
      key35: value48
      key36: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value31
          key7: value0
          key47: value30
      podSelector:
        matchLabels:
          key37: value47
          key36: value5
          key28: value0
